--- a/styles.css
+++ b/styles.css
@@ -10,26 +10,29 @@ header {
     top:0;
 }
 
-header a {
-    color: white;
-    text-decoration:none;
-}
+/* header har class .navbar */
 .navbar {
     position: sticky;
     display: flex;
-    background-color: #333;
+    background-color: #ffc0cb;
     justify-content: space-between;
     align-items: center;
     color:white;
-    
 }
 
+/* .logo ligger i header */
 .logo {
-    padding: 1rem;
+    
     font-size: 1.5rem;
     margin: .5rem
 }
 
+/* Sätter storlek på bild i .logo */
+.logo img {
+    width: 50%;
+}
+
+/*.navbar-links ligger i header */
 .navbar-links ul {
     margin: 0;
     padding: 0;
@@ -43,19 +46,20 @@ header a {
 
 .navbar-links li a {
     text-decoration: none;
-    color: white;
+    color: #ff0000;
     padding: 1rem;
     display: block;
 }
 
 .navbar-links li:hover {
-    background-color: #585858;
+    background-color: #ffffff;
     border-radius: 100px;
 }
 
+/* .toggle-button ligger i header */
 .toggle-button {
     position: absolute;
-    top: 2rem;
+    top: 5rem;
     right: 1rem;
     display: none;
     flex-direction: column;
@@ -67,10 +71,11 @@ header a {
 .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: #ff0000;
     border-radius: 10px;
 }
 
+/*.wrapper-new kommer under headern, container för nyheterna på startsidan */
 .wrapper-new {
     flex-wrap: wrap;
     display: flex;
@@ -79,27 +84,37 @@ header a {
     justify-content: space-evenly;
 }
 
-.wrapper-events {
-    flex-wrap: wrap;
-    display: flex;
-    
-    
-    width: 100vw;
-    justify-content: space-evenly;
+.wrapper-new h2 {
+    margin-top: 2rem;
 }
 
+/*.card ligger i wrapper new, container för bild på bok */
 .card {
-    margin: 1rem;
+    margin-bottom: 1rem;
     display: flex;
-    align-items:end;
+    height: fit-content;
+    /* align-items:end; */
+    box-shadow: 10px 10px 5px grey;
 }
 
 .card img {
     width: 100%;
 }
 
+/* Kommer efter .wrapper-new, container för evenemang på startsida. */
+.wrapper-events {
+    flex-wrap: wrap;
+    display: flex;
+    
+    width: 100vw;
+    justify-content: space-evenly;
+}
+
+/*Ligger i wrapper-events, innehåller info om evenemang på startsidan */
 .event-card {
+    margin: 1rem;
     width: 20vw;
+    line-height: 1.5;
     display: flex;
     flex-direction: column;
     border: 1px solid black;
@@ -107,21 +122,36 @@ header a {
     padding: 1rem;
     box-shadow: 10px 10px 10px grey;
 }
-.book-wrapper h2 {
-    
-    margin-top: 2rem;
+
+.event-card h2 {
+    text-align: start;
 }
+
+/*Brytlinje mellan Nyheter och Evenemang på startsidan, ligger i main */
+.line {
+    margin-top: 2rem;
+    border-top: 3px dotted #ffc0cb;
+}
+
+/* H2 rubriker på starsidan ovanför Nyheter och Evenmang */
+.news-index, .events-index {
+    padding: 2rem;
+    text-align: center;
+}
+
 
 /* Här kommer nyhetssidan */
 
+/*Container för böckerna på nyhetssidan */
 .book-wrapper {
     
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
 }
+
+/* Ligger i .book-wrapper, container för bok. */
 .book-card {
     margin: 1rem;
     width: 50vw;
@@ -133,12 +163,17 @@ header a {
     box-shadow: 10px 1px 40px grey;
 }
 
+/* Ligger i book-card, innehåller bild på bok */
 .book-cover {
     padding: 1rem;
 }
 
-.article  {
+.book-cover img {
+    box-shadow: 5px 5px 5px grey;
+}
 
+/* Ligger i book-card och innehåller beskrivning av bok */
+.article  {
     padding: 1rem;
 }
 
@@ -147,10 +182,19 @@ header a {
     line-height: 1.5;
 }
 
+/* Span element i .article */
 .author {
     font-size: 1rem;
     font-style:italic;
 }
+
+/* Evenemang sidan */
+
+.events, .news {
+    padding: 2rem;
+    text-align: center;
+}
+
 
 
 
@@ -188,7 +232,7 @@ header a {
     }
 
     .navbar-links li:hover {
-        background-color: #585858;
+        background-color: #ffffff;
         border-radius: 1px;
         width: 100%;
     }
@@ -198,11 +242,15 @@ header a {
   }
 
   .wrapper-events {
+    display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .event-card {
+    margin: 0;
     margin-bottom: 1rem;
+    width: 100%;
   }
 
   /*Här kommer för nyhetssidan */
@@ -213,6 +261,7 @@ header a {
   }
 
   .book-card {
+    text-align: left;
     flex-direction: column;
     width: 100vw;
   }
