--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,17 @@ body {
   color: #2b2b2b;
 }
 
+footer {
+  width: 100%;
+  background-color: #ffc0cb;
+  color: #ff0000;
+  text-align: center;
+}
+footer.bottom {
+  position: absolute;
+  bottom: 0;
+}
+
 .navbar {
   background-color: #ffc0cb;
   color: #ff0000;
@@ -34,6 +45,7 @@ body {
   list-style: none;
   transition: background-color 0.1s ease;
   border-radius: 100px;
+  margin-left: 5px;
 }
 .navbar .navbar-links ul li a {
   padding: 1rem;
@@ -42,6 +54,9 @@ body {
   color: #ff0000;
 }
 .navbar .navbar-links ul li:hover {
+  background-color: #fff;
+}
+.navbar .navbar-links ul li.active {
   background-color: #fff;
 }
 .navbar .toggle-button {
@@ -139,6 +154,11 @@ body {
 .book-wrapper .book-card .book-cover img {
   box-shadow: 5px 5px 5px #808080;
 }
+@media screen and (max-width: 400px) {
+  .book-wrapper .book-card .book-cover img {
+    height: 250px;
+  }
+}
 .book-wrapper .book-card .article {
   padding: 1rem;
 }
@@ -157,7 +177,7 @@ body {
   text-align: center;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   .navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -212,9 +232,10 @@ body {
     flex-direction: column;
     text-align: center;
   }
-  .book-card {
+  .book-wrapper .book-card {
     text-align: left;
     flex-direction: column;
+    width: 100%;
   }
 }
 /* Sami fixar?? */
